@@ -1,5 +1,14 @@
 2008-07-01  kitone  <kitone@gna.org>
 
+	* src/Document.cc:
+	* src/Document.h:
+	* src/Subtitle.cc:
+	* src/Subtitle.h:
+	Introduce frame support. 
+	Method for time and frame.
+
+2008-07-01  kitone  <kitone@gna.org>
+
 	* src/SubtitleModel.cc:
 	* src/SubtitleModel.h:
 	Introduce new real values for the time. 
